--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,11 @@ header nav li a {
     color: var(--dark-text);
     padding: 1.5vh 3vh;
     border-radius: 5px;
-    transition: .4s;
+    transition: .2s;
 }
 header nav li a:hover {
     box-shadow: inset -5px -5px 10px var(--white), inset 5px 5px 10px var(--grey);
-    transition: .4s;
+    transition: .2s;
 }
 
 #home {
@@ -84,7 +84,7 @@ header nav li a:hover {
     padding: 1.5vh 5vh;
     margin-right: 3vw;
     border-radius: 5px;
-    transition: 0.4s;
+    transition: .2s;
 }
 
 #home section #button a:nth-child(1) {
@@ -93,12 +93,12 @@ header nav li a:hover {
 
 #home section #button a:nth-child(1):hover {
     box-shadow: 0px 0px 0px var(--white), 0px 0px 0px var(--grey);
-    transition: .4s;
+    transition: .2s;
 }
 
 #home section #button a:nth-child(2):hover {
     box-shadow: inset -5px -5px 10px var(--white), inset 5px 5px 10px var(--grey);
-    transition: .4s;
+    transition: .2s;
 }
 
 #home section h1 {
@@ -137,6 +137,26 @@ main ul li img {
     border-radius: 10px;
 }
 
+
+input[type="checkbox"] {
+    display: none;
+}
+
+.like-checkbox {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-image: url("/img/icon/coeur_black.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked + .like-checkbox {
+    background-image: url("/img/icon/coeur_red.png");
+}
+
+
 main ul {
     display: flex;
     flex-direction: row;
@@ -151,12 +171,12 @@ main ul li {
     width: 13vw;
     min-height: 20vh;
     margin: 5vh 10vh;
-    transition: .4s;
+    transition: .2s;
 }
 
 main ul li:hover {
     box-shadow: none;
-    transition: .4s;
+    transition: .2s;
     cursor: pointer;
 }
 
@@ -173,6 +193,7 @@ main ul li:hover {
 
 #cards-research #searchbar:focus::placeholder {
     color: var(--violet1);
+    opacity: 0;
 }
 
 #profil {
@@ -273,7 +294,7 @@ main ul li:hover {
     padding: 4vh;
 }
 
-.reg-name input, .reg-psw input, .reg-email input {
+.reg-name input, .reg-psw input, .reg-email input, .reg-name-modal input, .reg-psw-modal input, .reg-email-modal input {
     border: none;
     background-color: var(--background);
     padding: 10px 15px;
@@ -290,7 +311,7 @@ form input[type="submit"] {
     background-color: var(--background);
     box-shadow: -5px -5px 10px var(--white), 5px 5px 10px var(--grey);
     margin-top: 2vh;
-    transition: .4s;
+    transition: .2s;
 }
 
 form input[type="submit"]:hover {
@@ -298,5 +319,92 @@ form input[type="submit"]:hover {
     color: var(--background);
     cursor: pointer;
     box-shadow: none;
-    transition: .4s;
+    transition: .2s;
+}
+
+#modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    opacity: 0;
+    z-index: 100;
+    transition: opacity 0.3s ease;
+}
+
+.modal-content {
+    background: var(--background);
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#open-modal-btn {
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+    padding: 3vh;
+    background: var(--background);
+    color: var(--violet2);
+    border: none;
+    cursor: pointer;
+    font-size: 1vw;
+    border-radius: 10px;
+    box-shadow: -4px -4px 10px var(--white), 4px 4px 10px var(--grey);
+    transition: .2s;
+}
+
+
+#open-modal-btn:hover {
+    background-color: var(--violet2);
+    color: var(--background);
+    cursor: pointer;
+    box-shadow: none;
+    transition: .2s;
+}
+
+#close-modal-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background: #dc3545;
+    color: var(--white);
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+/* #modal form input {
+    padding: 1.5vh 5vh;
+    outline: none;
+    border: 1px solid var(--violet2);
+    border-radius: 5px;
+} */
+
+#modal form {
+    padding: 10vh;
+}
+#modal form p {
+    margin-bottom: 10px;
+}
+#modal form h2 {
+    margin-bottom: 40px;
+}
+
+#modal form input {
+    margin-bottom: 20px;
+    padding: 2vh 7vh;
+}
+
+#modal form input:focus::placeholder {
+    opacity: 0;
+}
+#modal form input[type="submit"] {
+    border: none;
 }
