--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,54 @@
     --dark-text: #111;
 }
 
+
+
+  
+
+
+[data-maison="Gryffondor"] {
+    background-color: #740001;
+    
+}
+
+[data-maison="Serpentard"] {
+    background-color: #1a472a;
+    
+}
+
+[data-maison="Serdaigle"] {
+    background-color: #222f5b;
+   
+}
+
+[data-maison="Poufsouffle"] {
+    background-color: #ffdb00;
+    
+}
+
+.maison-btn, #reset {
+    background-color: var(--background);
+    text-transform: uppercase;
+    border: none;
+    border-radius: 5px;
+    box-shadow: -5px -5px 10px var(--white), 5px 5px 10px var(--grey);
+    padding: 1.5vh 3vh;
+    margin-right: 10px;
+}
+
+.maison-btn:hover, #reset:hover  {
+    color: var(--violet1);
+    cursor: pointer;
+    box-shadow: none;
+}
+
+#maisons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 4vh 0vh;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -23,6 +71,7 @@ body {
     min-height: 100vh;
     width: 99vw;
     background-color: var(--background);
+    color: var(--dark-text);
     padding: 0vw 12vw;
     font-family: "Poppins", sans-serif;
 }
@@ -59,6 +108,47 @@ header nav li a {
 header nav li a:hover {
     box-shadow: inset -5px -5px 10px var(--white), inset 5px 5px 10px var(--grey);
     transition: .2s;
+}
+
+/* Style pour le sidenav */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--dark-text);
+    overflow-x: hidden;
+    transition: 0.2s;
+    padding-top: 60px;
+    display: none;
+}
+  
+.sidenav a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--light-text);
+    display: block;
+    transition: 0.3s;
+}
+  
+.sidenav a:hover {
+    color: var(--white);
+}
+  
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#burger {
+    width:20%;
+    display: none;
 }
 
 #home {
@@ -407,4 +497,26 @@ form input[type="submit"]:hover {
 }
 #modal form input[type="submit"] {
     border: none;
+}
+
+
+@media (max-width: 600px) {
+    header {
+      display: none;
+    }
+    .sidenav {
+        display: block;
+    }
+    #burger {
+        display: block;
+    }
+    #home {
+        padding: 0vh;
+    }
+    #home img{
+        display: none;
+    }
+    #home section h1 {
+        font-size: 6vh;
+    }
 }
