--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header nav {
 }
 
 header nav li {
-    padding: 0vw 2vw;
+    padding: 2vw 2vw;
 }
 
 header nav li a {
@@ -147,7 +147,7 @@ header nav li a:hover {
 }
 
 #burger {
-    width:20%;
+    width: 10%;
     display: none;
 }
 
@@ -369,7 +369,6 @@ main ul li:hover {
 }
 
 #register form h2 {
-    
     font-size: 3vw;
 }
 
@@ -501,6 +500,9 @@ form input[type="submit"]:hover {
 
 
 @media (max-width: 600px) {
+    body {
+        padding: 2vw;
+    }
     header {
       display: none;
     }
@@ -512,11 +514,72 @@ form input[type="submit"]:hover {
     }
     #home {
         padding: 0vh;
+        display: flex;
+        align-items: flex-start;
     }
-    #home img{
+    #home img:nth-child(3){
         display: none;
     }
     #home section h1 {
         font-size: 6vh;
+        color: var(--violet1);
+    }
+    #home #button {
+        display: flex;
+    }
+    #open-modal-btn {
+        right:15px;
+        bottom:15px;
+        padding: 2vh;
+        font-size: 3vh;
+        z-index: 10;
+    }
+    #close-modal-btn {
+        margin-top: 0px;
+        margin-bottom: 20px;
+    }
+
+    #cards-research #burger {
+        width: 20%;
+    }
+    #cards-research h1{
+        font-size: 5vh;
+        margin: 15px;
+    }
+    #maisons {
+        display: block;
+    }
+    .maison-btn, #reset {
+        padding: 1vh;
+        margin: 20px;
+    }
+    #card-list {
+        margin-bottom: 45px;
+    }
+    main ul li {
+        width: 20vw;
+        margin: 3vh 4vh;
+    }
+
+    #profil {
+        margin-top: 0px;
+    }
+    #profil .pseudo h1 {
+        font-size: 4vh;
+    }
+    #profil #burger {
+        width: 20%;
+    }
+
+    #burger {
+        width: 20%;
+    }
+
+    #register form {
+        font-size: 3vh;
+        box-shadow: none;
+    }
+    #register form h2 {
+        font-size: 5vh;
     }
 }
