--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ main ul li img {
 }
 
 
-input[type="checkbox"] {
+/* input[type="checkbox"] {
     display: none;
 }
 
@@ -244,7 +244,7 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked + .like-checkbox {
     background-image: url("../img/icon/coeur_red.png");
-}
+} */
 
 
 main ul {
@@ -293,7 +293,8 @@ main ul li:hover {
     min-height: 60vh;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
 }
 #card-view img {
     width: 20%;
@@ -310,8 +311,6 @@ main ul li:hover {
     padding: 9vh;
     border-radius: 10px;
 }
-
-
 
 #profil {
     width: 100%;
