--- a/css/style.css
+++ b/css/style.css
@@ -11,27 +11,6 @@
   --dark-text: #111;
 }
 
-/* 
-[data-maison="Gryffindor"] {
-    background-color: #740001;
-    
-}
-
-[data-maison="Slytherin"] {
-    background-color: #1a472a;
-    
-}
-
-[data-maison="Ravenclaw"] {
-    background-color: #222f5b;
-   
-}
-
-[data-maison="Hufflepuff"] {
-    background-color: #ffdb00;
-    
-} */
-
 .maison-btn,
 #reset {
   background-color: var(--background);
@@ -67,10 +46,9 @@
 
 body {
   min-height: 100vh;
-  width: 99vw;
+  width: 100vw;
   background-color: var(--background);
   color: var(--dark-text);
-  padding: 0vw 12vw;
   font-family: "Poppins", sans-serif;
 }
 
@@ -78,7 +56,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3vh 3vh;
+  padding: 3vh 0vh;
   border-radius: 0px 0px 4px 4px;
   box-shadow: -5px -5px 10px var(--white), 5px 5px 10px var(--grey);
 }
@@ -103,6 +81,7 @@ header nav li a {
   border-radius: 5px;
   transition: 0.2s;
 }
+
 header nav li a:hover {
   box-shadow: inset -5px -5px 10px var(--white), inset 5px 5px 10px var(--grey);
   transition: 0.2s;
@@ -151,12 +130,11 @@ span {
   width: 10%;
   display: none;
 }
-
 #home {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5vh 0vh;
+  padding: 5vh 12vw;
 }
 
 #home section {
@@ -315,6 +293,10 @@ main ul li:hover {
 .hp-card {
   text-align: center;
   padding: 2vh;
+  display: block;
+}
+.hp-card.hidden {
+  display: none;
 }
 
 #profil {
