adding openning card system and profil view

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url(./header.css);
 @import url(./modal.css);
 @import url(./home-main.css);
+@import url(./open-booster.css);
 
 * {
   margin: 0;
