--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,8 @@ main .research h1 {
 }
 
 main ul li img {
+  /* width: 100px;
+  min-height: 200px; */
   width: 100%;
   border-radius: 10px;
 }
@@ -273,7 +275,7 @@ main ul li:hover {
 }
 
 #card-view img {
-  width: 20%;
+  width: 30vw;
   box-shadow: -5px -5px 10px var(--white), 5px 5px 10px var(--grey);
 }
 
