adding favorite button

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 @import url(./modal.css);
 @import url(./home-main.css);
 @import url(./open-booster.css);
+@import url(./favorite.css);
 
 * {
   margin: 0;
