--- a/css/favorite.css
+++ b/css/favorite.css
@@ -1,28 +1,41 @@
-/* Ajoutez du style pour la classe 'favorite' */
 .hp-card.favorite {
   border: 2px solid gold;
+  transition: 0.3s;
 }
 
 .favorite-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0px;
+  right: 0px;
   background: transparent;
   border: none;
   cursor: pointer;
   font-size: 1.5rem;
   outline: none;
-  transition: color 0.3s; /* Ajout de la transition pour le changement de couleur */
+  transition: 0.3s;
 }
 
-/* Style pour le coeur favori */
+.like {
+  position: absolute;
+  top: -2.7vh;
+  right: -2.7vh;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 50%;
+  background-color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+.hp-card.favorite {
+  border-color: var(--gold);
+  transition: 0.3s;
+}
+
 svg.favorite path {
   width: 50px;
-  /* background-color: red; */
-  fill: red; /* Couleur du coeur lorsque la carte est favorite */
-}
-
-/* Style pour les cartes favorites */
-.hp-card.favorite {
-  border-color: gold; /* Bordure dorée pour les cartes favorites */
+  fill: var(--red);
+  transition: 0.3s;
 }
