--- a/css/header.css
+++ b/css/header.css
@@ -2,14 +2,19 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3vh 0vh;
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: -5px -5px 10px var(--white), 5px 5px 10px var(--grey);
+  padding: 4vh 5vh;
+  background-color: var(--white);
+  /* border-bottom: 2px solid var(--light-black); */
+  /* border-bottom: 1px solid var(--primary-light); */
 }
 
 header h2 {
   font-size: 2rem;
   padding: 0vw 2vw;
+}
+
+header h2 span {
+  color: var(--primary);
 }
 
 header nav {
@@ -23,14 +28,36 @@ header nav li {
 
 header nav li a {
   color: var(--dark-text);
-  padding: 1.5vh 3vh;
+  padding: var(--normal);
+  background-color: var(--white);
   border-radius: 5px;
-  transition: 0.2s;
+  border: var(--border-button-color);
+  transition: 0.3s;
 }
 
 header nav li a:hover {
-  box-shadow: inset -5px -5px 10px var(--white), inset 5px 5px 10px var(--grey);
-  transition: 0.2s;
+  color: var(--white);
+  border: var(--border-button-white);
+  background-color: var(--primary-light);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+header button {
+  color: var(--white);
+  padding: var(--normal);
+  background-color: var(--primary);
+  border-radius: 5px;
+  border: var(--border-button-color);
+  transition: 0.3s;
+}
+
+header button:hover {
+  color: var(--white);
+  border: var(--border-button-white);
+  background-color: var(--primary-light);
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .sidenav {
