--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,22 @@
-@import url(./style.css);
+/* @import url(./style.css); */
 @import url(./variables.css);
 @import url(./body.css);
 @import url(./header.css);
-@import url(./modal.css);
 @import url(./home-main.css);
+@import url(./booster-openning.css);
+@import url(./modal.css);
 @import url(./open-booster.css);
+@import url(./filter.css);
 @import url(./favorite.css);
+@import url(./search.css);
+@import url(./cards-collection.css);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-size: var(--p);
   font-family: var(--font-f);
 }
