--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 /* FONT */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700;800&display=swap");
 
 /* VARIABLES */
 :root {
@@ -7,6 +7,10 @@
   --font-f: "Poppins", sans-serif;
 
   /* COLORS */
+  --white: #ffffff;
+  --black: #121212;
+  --light-black: #1d1d1d;
+
   --primary: #5628ee;
   --primary-light: #8c6ff0;
   --secondary: #23c4f8;
@@ -14,6 +18,9 @@
   --success: #57ca81;
   --error: #d04863;
   --warning: #f6d87c;
+
+  --gold: #ffd700;
+  --red: #ff0000;
 
   /* TEXT */
   /* titles */
@@ -27,8 +34,8 @@
   /* BUTTON */
   /* padding */
   --small: 6px 20px;
-  --normal: 10px 28px;
+  --normal: 10px 30px;
   /* border */
-  --border-button-color: 1px solid var(--secondary);
+  --border-button-color: 1px solid var(--primary);
   --border-button-white: 1px solid var(--primary-light);
 }
