--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 body {
   min-height: 100vh;
   width: 99vw;
-  background-color: var(--background);
-  color: var(--dark-text);
+  background-color: var(--white);
+  color: var(--black);
   font-family: "Poppins", sans-serif;
 }
