--- a/css/booster-openning.css
+++ b/css/booster-openning.css
@@ -2,20 +2,22 @@
   background-color: var(--white);
   padding: 6vh 12vw;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
 #open-card #open {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 20vw;
 }
 
 #open-card #open h2 {
   color: var(--black);
-  text-align: center;
+  font-size: 4vh;
+  text-align: left;
   margin: 5vh 0px;
 }
 
@@ -48,15 +50,29 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-height: 60vh;
-  width: 60vw;
+  max-height: 60vh;
+  width: 55vw;
+  margin: 0vh 0vh 15vh 0vh;
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
+
+  /* border: 2px solid red; */
+  /* background-color: green; */
+}
+
+#booster-cards-container h2 {
+  text-align: center;
 }
 
 #booster-cards-container .card-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0vh 0vw 0vh 5vw;
+  margin-left: 22vh;
+  max-height: 60vh;
+  width: 60vw;
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
   flex-direction: row;
   flex-wrap: wrap;
   border-radius: 5px;
@@ -65,7 +81,7 @@
 
 #booster-cards-container .card-list .hp-card {
   margin: 0vw 2vw;
-  min-height: 36vh;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
