--- a/css/favorite.css
+++ b/css/favorite.css
@@ -1,8 +1,3 @@
-.hp-card.favorite {
-  border: 2px solid gold;
-  transition: 0.3s;
-}
-
 .favorite-btn {
   position: absolute;
   top: 0px;
@@ -32,6 +27,10 @@
 .hp-card.favorite {
   border-color: var(--gold);
   transition: 0.3s;
+}
+
+svg path {
+  fill: var(--primary);
 }
 
 svg.favorite path {
