--- a/css/header.css
+++ b/css/header.css
@@ -5,12 +5,13 @@ header {
   padding: 4vh 5vh;
   background-color: var(--white);
   /* border-bottom: 2px solid var(--light-black); */
-  /* border-bottom: 1px solid var(--primary-light); */
+  border-bottom: 1px solid var(--primary);
 }
 
 header h2 {
   font-size: 2rem;
   padding: 0vw 2vw;
+  color: var(--black-text);
 }
 
 header h2 span {
@@ -27,7 +28,7 @@ header nav li {
 }
 
 header nav li a {
-  color: var(--dark-text);
+  color: var(--black);
   padding: var(--normal);
   background-color: var(--white);
   border-radius: 5px;
@@ -67,7 +68,7 @@ header button:hover {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: var(--dark-text);
+  background-color: var(--black);
   overflow-x: hidden;
   transition: 0.2s;
   padding-top: 60px;
@@ -78,7 +79,7 @@ header button:hover {
   padding: 10px 15px;
   text-decoration: none;
   font-size: 25px;
-  color: var(--light-text);
+  color: var(--white);
   display: block;
   transition: 0.3s;
 }
