adding css login register

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 @import url(./cards-collection.css);
 @import url(./profile.css);
 @import url(./single-card-infos.css);
+@import url(./login.css);
 @import url(./animations.css);
 * {
   margin: 0;
