--- a/css/animations.css
+++ b/css/animations.css
@@ -62,10 +62,10 @@ header .darkmode {
 #my-profile {
   animation: slideLeft 0.4s ease-out;
 }
-#pseudo {
+#infos #pseudo {
   animation: slideLeft 0.8s ease-out;
 }
-#email {
+#infos #email {
   animation: slideLeft 1.2s ease-out;
 }
 /* STATS */
