--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 @import url(./login.css);
 @import url(./animations.css);
 @import url(./responsive.css);
+@import url(./footer.css);
 * {
   margin: 0;
   padding: 0;
