--- a/css/login.css
+++ b/css/login.css
@@ -1,27 +1,27 @@
 #register {
   background-color: var(--white);
   text-align: left;
-  min-height: 60vh;
+  min-height: 40vh;
   padding: 0vh 5vh 5vh 5vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row-reverse;
   text-align: left;
   transition: 0s;
 }
 
 #register #reg-form {
-  width: 50%;
-  min-height: 60vh;
+  width: 35%;
+  min-height: 40vh;
   background-color: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   text-align: left;
-  border-left: 2px solid var(--primary);
-  border-right: 2px solid var(--primary);
-  border-bottom: 2px solid var(--primary);
+  border-radius: 5px;
+  border: 2px solid var(--primary);
 }
 
 #reg-form h2 {
@@ -36,7 +36,7 @@
 
 #register #reg-form input {
   border: 2px solid var(--black);
-  margin-bottom: 20px;
+  margin-bottom: 2vh;
   padding: 2vh 7vh;
   border-radius: 5px;
   color: var(--primary);
@@ -73,4 +73,36 @@
 
 #reg-form a {
   margin: 15px;
+}
+
+/* VALIDATION */
+.message-error {
+  border: 1px solid var(--red);
+  color: var(--white);
+  background: var(--error);
+  padding: 1vh;
+  border-radius: 5px;
+  display: none;
+}
+
+.message-success {
+  border: 1px solid var(--success);
+  color: var(--white);
+  background-color: var(--success);
+  padding: 1vh;
+  border-radius: 5px;
+  display: none;
+}
+
+input.success {
+  background-color: var(--success);
+}
+
+input.error {
+  background-color: var(--error);
+}
+
+.message-error.visible,
+.message-success.visible {
+  display: flex;
 }
