--- a/css/login.css
+++ b/css/login.css
@@ -20,8 +20,10 @@
   justify-content: center;
   flex-direction: column;
   text-align: left;
-  border-radius: 5px;
-  border: 2px solid var(--primary);
+  border-radius: 0 0 5px 5px;
+  border-left: 2px solid var(--primary);
+  border-right: 2px solid var(--primary);
+  border-bottom: 2px solid var(--primary);
 }
 
 #reg-form h2 {
@@ -76,20 +78,28 @@
 }
 
 /* VALIDATION */
+
 .message-error {
-  border: 1px solid var(--red);
   color: var(--white);
+  position: absolute;
+  left: 67%;
+  top: 37%;
   background: var(--error);
-  padding: 1vh;
+  margin: 0 2vh;
+  padding: 6vh 3vh;
+  width: 20%;
   border-radius: 5px;
   display: none;
 }
 
+.message-error li {
+  padding: 10px;
+}
+
 .message-success {
-  border: 1px solid var(--success);
   color: var(--white);
   background-color: var(--success);
-  padding: 1vh;
+  padding: 0;
   border-radius: 5px;
   display: none;
 }
